changed the default host from localhost to evergreen.example.org for better documentation

--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -626,9 +626,11 @@ Example opensrf config file for OpenILS
 
     <hosts>
 
-        <localhost> 
-            <!-- ^-=- must match the fully qualified domain name of the host 
-               on Linux, this is usually the output of "hostname -f"
+        <evergreen.example.org> 
+            <!-- ^-=- 
+                must match the fully qualified domain name of the host.
+                on Linux, this is usually the output of "hostname -f"
+               'localhost' won't work here
             -->
 
             <activeapps>
@@ -650,7 +652,7 @@ Example opensrf config file for OpenILS
                 <appname>open-ils.reporter</appname>  
                 <appname>open-ils.reporter-store</appname>  
             </activeapps>
-        </localhost>
+        </evergreen.example.org>
     </hosts>
 
 </opensrf>
