updated example config files to opensrf_core.xml

--- a/Open-ILS/examples/oils_sip.xml.example
+++ b/Open-ILS/examples/oils_sip.xml.example
@@ -54,7 +54,7 @@
 	
 			<!-- implementation specific config options go here -->
 			<implementation_config>
-				<bootstrap>/openils/conf/bootstrap.conf</bootstrap>
+				<bootstrap>/openils/conf/opensrf_core.xml</bootstrap>
 				<currency>USD</currency>
 
 				<!-- These defines what this SIP code has the ability to support -->
