gave the OPAC the ability to use an alternate host for images.  will likely add the same for CSS and JS.  added example config setting the apache config

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -64,6 +64,12 @@ RewriteRule /opac/extras/jacket/large/(.*) \
     SetEnvIf Request_URI "/en-US/" locale=en-US
     SetEnvIf Request_URI "/fr/" locale=fr
     SetEnvIf Request_URI ".*" OILS_OPAC_BASE=/opac/
+    
+    # This gives you the option to configure a different host to serve OPAC images from
+    # Specify the hostname (withouth protocol) and path to the images.  Protocol will
+    # be determined at runtime
+    #SetEnvIf Request_URI ".*" OILS_OPAC_IMAGES_HOST=images.example.org/opac/extras/jacket/
+
 </LocationMatch>
 
 
