added support fetching javascript and css from an alternate host.  updated apache config example

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -68,7 +68,9 @@ RewriteRule /opac/extras/jacket/large/(.*) \
     # This gives you the option to configure a different host to serve OPAC images from
     # Specify the hostname (withouth protocol) and path to the images.  Protocol will
     # be determined at runtime
-    #SetEnvIf Request_URI ".*" OILS_OPAC_IMAGES_HOST=images.example.org/opac/extras/jacket/
+    #SetEnvIf Request_URI ".*" OILS_OPAC_IMAGES_HOST=static.example.org/opac/
+    #SetEnvIf Request_URI ".*" OILS_OPAC_CSS_HOST=static.example.org/opac/
+    #SetEnvIf Request_URI ".*" OILS_OPAC_JS_HOST=static.example.org/opac/
 
 </LocationMatch>
 
