added Dan Scott's fr-CA OPAC translation.  Thanks, Dan./osrf_json_test > /tmp/jj  Updated the apache example config to allow support for the new translation

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -62,7 +62,7 @@ RewriteRule /opac/extras/jacket/large/(.*) \
 		    
     # add languages as necessary
     SetEnvIf Request_URI "/en-US/" locale=en-US
-    SetEnvIf Request_URI "/fr/" locale=fr
+    SetEnvIf Request_URI "/fr-CA/" locale=fr-CA
     SetEnvIf Request_URI ".*" OILS_OPAC_BASE=/opac/
     
     # This gives you the option to configure a different host to serve OPAC images from
