Patch from Dan Scott to make the slimpac I18N friendly(-ish):
The attached patch enables the slimpac (the accessible, basic HTML
version of the OPAC), to support various translations of the search
forms by reusing the existing opac.dtd.

There are a few extra strings that we'll have to translate for
complete fr-CA support, but it's mostly there.

Note that the search _results_ are not yet i18n-ized; there's a fair
bit of work remaining there (thanks unAPI!). Also note that the method
used here changes the slimpac path from /opac/extras/slimpac/ to
/opac/ll-LL/extras/slimpac/ - although I do, of course, include a
redirect from the old /opac/extras/slimpac/ to
/opac/en-US/extras/slimpac/.

Finally, also note that the locale passing method may be subject to
change, or at least become more flexible, when OpenSRF sessions learn
about locales.

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -9,6 +9,13 @@
 # ----------------------------------------------------------------------------------
 RedirectMatch 301 ^/$ /opac/en-US/skin/default/xml/index.xml
 
+# ----------------------------------------------------------------------------------
+# Assign a default locale to the accessible OPAC
+# ----------------------------------------------------------------------------------
+RedirectMatch 301 ^/opac/extras/slimpac/start.html$ /opac/en-US/extras/slimpac/start.html
+RedirectMatch 301 ^/opac/extras/slimpac/advanced.html$ /opac/en-US/extras/slimpac/advanced.html
+
+
 
 # ----------------------------------------------------------------------------------
 # Configure the gateway
@@ -86,8 +93,8 @@ RewriteRule /opac/extras/jacket/large/(.*) \
     AddType application/xhtml+xml .xml
 </LocationMatch>
 
-<LocationMatch /opac/extras/slimpac/>
-    AddOutputFilter INCLUDES .html
+<LocationMatch /opac/.*/extras/slimpac/>
+    AddOutputFilter INCLUDES;XMLENT .html
 </LocationMatch>
 	
 # ----------------------------------------------------------------------------------
