configuration support for the exporter service

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -181,6 +181,16 @@ RewriteRule /opac/extras/jacket/large/(.*) \
 
 	
 # ----------------------------------------------------------------------------------
+# The exporter lives here
+# ----------------------------------------------------------------------------------
+<Location /exporter>
+    SetHandler perl-script
+    PerlHandler OpenILS::WWW::Exporter
+    Options +ExecCGI
+    allow from all
+</Location>
+
+# ----------------------------------------------------------------------------------
 # Reporting output lives here
 # ----------------------------------------------------------------------------------
 <Location /reporter/>
