--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -105,6 +105,9 @@ RewriteRule /opac/extras/jacket/large/(.*) \
     XMLEntContentType "application/vnd.mozilla.xul+xml"
     AddOutputFilter INCLUDES;XMLENT .xul
     allow from all
+
+    # We only support one locale (en-US) for the time being
+    SetEnv locale=en-US
 </LocationMatch>
 
 # ----------------------------------------------------------------------------------
