Patch from Dan Scott to robustify current JS localization code

--- a/Open-ILS/xul/staff_client/Makefile
+++ b/Open-ILS/xul/staff_client/Makefile
@@ -74,7 +74,10 @@ generated:
 	@echo
 	@echo '********************************************************* Grabbing lang.dtd from the OPAC code '
 	cp ../../../Open-ILS/web/opac/locale/en-US/lang.dtd build/chrome/locale/en-US/
+	# Generate the lang.js file for the stamped build
 	external/dtd2js.pl build/chrome/locale/en-US/lang.dtd > build/chrome/content/main/lang.js
+	# Generate the lang.js file for versionless as well
+	external/dtd2js.pl build/chrome/locale/en-US/lang.dtd > chrome/content/main/lang.js
 
 open-ils:
 	@echo
