Patch from Dan Scott to bring the staff client application.ini into modern times

--- a/Open-ILS/xul/staff_client/application.ini
+++ b/Open-ILS/xul/staff_client/application.ini
@@ -4,26 +4,26 @@
 ;
 ; This field specifies your organization's name.  This field is recommended,
 ; but optional.
-Vendor=PINES
+Vendor=OpenILS
 ;
 ; This field specifies your application's name.  This field is required.
 Name=open_ils_staff_client
 ;
 ; This field specifies your application's version.  This field is optional.
-Version=0.1.0
+Version=1.2.0
 ;
 ; This field specifies your application's build ID (timestamp).  This field is
 ; required.
-BuildID=2005072719
+BuildID=20070805
 ;
 ; This field specifies a compact copyright notice for your application.  This
 ; field is optional.
-Copyright=Copyright (c) 2005 GPLS/PINES
+Copyright=Copyright (c) 2005-2007 GPLS/PINES
 ;
 ; This ID is just an example.  Every XUL app ought to have it's own unique ID.
 ; You can use the microsoft "guidgen" or "uuidgen" tools, or go on
 ; irc.mozilla.org and /msg botbot uuid.  This field is optional.
-ID={09ce6f37-9e73-48db-a264-d095f9f22bb3}
+ID=staff-client@open-ils.org
 [Gecko]
 ;
 ; This field is required.  It specifies the minimum Gecko version that this
