rip out the symlink 'conveniences' and make it work when lang.js is not in the repository

--- a/Open-ILS/xul/staff_client/Makefile
+++ b/Open-ILS/xul/staff_client/Makefile
@@ -6,32 +6,12 @@ all: build
 	@echo
 	@echo
 
-build: remove_symlinks build_dir generated open-ils custom stamp add_symlinks 
+build: build_dir generated open-ils custom stamp 
 	@echo
 	@echo 
 	@echo To test the staff client:
 	@echo "  cd build/"
 	@echo "  xulrunner application.ini"
-
-remove_symlinks:
-	@echo
-	@echo Removing convenience symlinks from server/ and chrome/ before copying to build/
-	find server/ -type l -exec rm -f {} \;
-	find chrome/ -type l -exec rm -f {} \;
-
-add_symlinks:
-	@echo
-	@echo Adding convenience symlinks back into server/ and chrome/
-	ln -s ../chrome/content/util server/util
-	ln -s ../chrome/content/auth server/auth
-	ln -s ../../chrome/content/main/constants.js server/main/constants.js
-	ln -s ../../chrome/content/main/lang.js server/main/lang.js
-	ln -s ../../chrome/content/main/simple_auth.xul server/main/simple_auth.xul
-	ln -s ../../chrome/content/OpenILS/data.js server/OpenILS/data.js
-	#(cd build/chrome/content/OpenSRF/; for x in *; do ln -s  ../../../build/chrome/content/OpenSRF/$$x ../../../../chrome/content/OpenSRF/$$x; done)
-	(cd build/chrome/content/OpenILS/util/; for x in *; do if [ $$x != 'fmall.js' ]; then ln -s  ../../../../build/chrome/content/OpenILS/util/$$x ../../../../../chrome/content/OpenILS/util/$$x; fi ; done)
-	#(cd build/chrome/content/legacy/; for x in [a-z]*; do ln -s  ../../../build/chrome/content/legacy/$$x ../../../../chrome/content/legacy/$$x; done)
-	(cd build/chrome/locale/en-US/; for x in *; do ln -s  ../../../build/chrome/locale/en-US/$$x ../../../../chrome/locale/en-US/$$x; done)
 
 build_dir:
 	@echo
@@ -45,7 +25,6 @@ build_dir:
 	cp -R build/chrome/content/util/ build/server/
 	cp -R build/chrome/content/auth/ build/server/
 	cp build/chrome/content/main/constants.js build/server/main/constants.js
-	cp build/chrome/content/main/lang.js build/server/main/lang.js
 	cp build/chrome/content/main/simple_auth.xul build/server/main/simple_auth.xul
 	cp build/chrome/content/OpenILS/data.js build/server/OpenILS/data.js
 	cp build/chrome/content/OpenILS/global_util.js build/server/OpenILS/global_util.js
@@ -72,8 +51,7 @@ generated:
 	cp ../../../Open-ILS/web/opac/locale/en-US/lang.dtd build/chrome/locale/en-US/
 	# Generate the lang.js file for the stamped build
 	external/dtd2js.pl build/chrome/locale/en-US/lang.dtd > build/chrome/content/main/lang.js
-	# Generate the lang.js file for versionless as well
-	external/dtd2js.pl build/chrome/locale/en-US/lang.dtd > chrome/content/main/lang.js
+	cp build/chrome/content/main/lang.js build/server/main/lang.js
 
 open-ils:
 	@echo
@@ -93,7 +71,7 @@ custom:
 	@echo '********************************************************* Placeholder for debugging tweaks '
 	#(cd chrome/content/OpenILS/util; cp RemoteRequest.js~ RemoteRequest.js)
 
-clean: remove_symlinks
+clean: 
 	@echo
 	@echo '********************************************************* Removing build/ '
 	rm -rf build/
