adding vhost example for the generic; adding to example startup.pl (and removing the reporter-specific one)

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -198,7 +198,10 @@ RewriteRule /opac/extras/jacket/large/(.*) \
 # ----------------------------------------------------------------------------------
 <Location /reporter/>
     SetHandler perl-script
-    PerlHandler OpenILS::Reporter::Proxy
+    PerlSetVar ProxyTitle "Report Login"
+    PerlSetVar ProxyDescription "Please log in to view this report"
+    PerlSetVar ProxyPermissions "VIEW_REPORT_OUTPUT"
+    PerlHandler OpenILS::WWW::Proxy
     Options +ExecCGI
     PerlSendHeader On
     allow from all
