added additional added content params

--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -141,6 +141,8 @@ Example opensrf config file for OpenILS
             <userid>MY_USER_ID</userid>
             <base_url>MY_BASE_URL</base_url>
             <timeout>2</timeout>
+            <retry_timeout>600</retry_timeout>
+            <max_errors>5</max_errors>
             -->
         </added_content>
 
