since the image fetching is now part of the added content plugin, apache now has the option to specify an alternate added content server.  committing config changes

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -72,11 +72,13 @@ RewriteRule /opac/extras/jacket/large/(.*) \
     SetEnvIf Request_URI "/fr-CA/" locale=fr-CA
     SetEnvIf Request_URI ".*" OILS_OPAC_BASE=/opac/
     
-    # This gives you the option to configure a different host to serve OPAC images from
-    # Specify the hostname (withouth protocol) and path to the images.  Protocol will
-    # be determined at runtime
-    #SetEnvIf Request_URI ".*" OILS_OPAC_IMAGES_HOST=static.example.org/opac/
+    # The following environment variables are optional.  They specify
+    # alternate servers for various static data
+    # Added Content server
+    #SetEnvIf Request_URI ".*" OILS_OPAC_AC_HOST=static.example.org/opac/
+    # Static CSS files server
     #SetEnvIf Request_URI ".*" OILS_OPAC_CSS_HOST=static.example.org/opac/
+    # Static JavaScript files server
     #SetEnvIf Request_URI ".*" OILS_OPAC_JS_HOST=static.example.org/opac/
 
 </LocationMatch>
