now that images are served as part of the added content plugin api, we don't want added content /and/ the image redirects both enabled by default.  added note in config explaining the use of the redirects

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -26,15 +26,16 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 # Set up the book jackets URL
 # XXX This pulls images from Amazon, don't use this in a production environment
+# This is an example of how you can have bookjacket images via Apache redirect,
+# if there is no full-fledged added content plugin for the site you want to 
+# fetch images from.
 # ----------------------------------------------------------------------------------
-RewriteEngine on
-ProxyTimeout 2
-RewriteRule /opac/extras/jacket/small/(.*) \
-    http://images.amazon.com/images/P/$1.01._SCMZZZZZZZ_.jpg [P,L]
-RewriteRule /opac/extras/jacket/large/(.*) \
-    http://images.amazon.com/images/P/$1.01._SCLZZZZZZZ_.jpg [P,L]
-
-
+#RewriteEngine on
+#ProxyTimeout 2
+#RewriteRule /opac/extras/ac/jacket/small/(.*) \
+#    http://images.amazon.com/images/P/$1.01._SCMZZZZZZZ_.jpg [P,L]
+#RewriteRule /opac/extras/ac/jacket/large/(.*) \
+#    http://images.amazon.com/images/P/$1.01._SCLZZZZZZZ_.jpg [P,L]
 
 # ----------------------------------------------------------------------------------
 # Added content plugin
