rolling back changeset 7744.  added content cannot use an alternate servers since it is xmlhttpreqeust based

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -73,13 +73,11 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
     SetEnvIf Request_URI "/fr-CA/" locale=fr-CA
     SetEnvIf Request_URI ".*" OILS_OPAC_BASE=/opac/
     
-    # The following environment variables are optional.  They specify
-    # alternate servers for various static data
-    # Added Content server
-    #SetEnvIf Request_URI ".*" OILS_OPAC_AC_HOST=static.example.org/opac/
-    # Static CSS files server
+    # This gives you the option to configure a different host to serve OPAC images from
+    # Specify the hostname (withouth protocol) and path to the images.  Protocol will
+    # be determined at runtime
+    #SetEnvIf Request_URI ".*" OILS_OPAC_IMAGES_HOST=static.example.org/opac/
     #SetEnvIf Request_URI ".*" OILS_OPAC_CSS_HOST=static.example.org/opac/
-    # Static JavaScript files server
     #SetEnvIf Request_URI ".*" OILS_OPAC_JS_HOST=static.example.org/opac/
 
 </LocationMatch>
