--- a/Open-ILS/examples/apache/eg.conf
+++ b/Open-ILS/examples/apache/eg.conf
@@ -68,16 +68,17 @@ Alias /cgi-bin/ "/openils/var/cgi-bin/"
 # ----------------------------------------------------------------------------------
 # OPTIONAL: Set up image caching - some of these options only work with apache2.2
 # ----------------------------------------------------------------------------------
-CacheRoot "/opt/cache/"
-CacheEnable disk /opac/extras/jacket/
-CacheMaxFileSize 1073741824
-CacheIgnoreCacheControl On
-CacheStorePrivate On
-CacheStoreNoStore On
-CacheIgnoreNoLastMod On
-CacheMaxExpire 86400
-CacheLastModifiedFactor 0.5
-CacheDefaultExpire 604800
+# XXX This is no longer needed with built-in added content image caching
+#CacheRoot "/opt/cache/"
+#CacheEnable disk /opac/extras/jacket/
+#CacheMaxFileSize 1073741824
+#CacheIgnoreCacheControl On
+#CacheStorePrivate On
+#CacheStoreNoStore On
+#CacheIgnoreNoLastMod On
+#CacheMaxExpire 86400
+#CacheLastModifiedFactor 0.5
+#CacheDefaultExpire 604800
 
 
 # ----------------------------------------------------------------------------------
