--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -135,15 +135,38 @@ Example opensrf config file for OpenILS
 
 
         <added_content>
-            <!-- configure an added content plugin -->
-            <!--
-            <module>OpenILS::WWW::AddedContent::MY_MODULE</module>
-            <userid>MY_USER_ID</userid>
-            <base_url>MY_BASE_URL</base_url>
-            <timeout>2</timeout>
+
+            <!-- XXX If you use the Amazon plugin, you must link back to Amazon in the OPAC -->
+
+            <!-- load the Amazon added content module -->
+            <module>OpenILS::WWW::AddedContent::Amazon</module>
+            <!-- Base URL for Amazon added content fetching.  This URL may
+                need to be shortened when new (read: non-image) content 
+                fetching capabilities are added -->
+            <base_url>http://images.amazon.com/images/P/</base_url>
+
+            <!-- Max number of seconds to wait for an added content request to 
+                return data.  Data not returned within the timeout is considered
+                a failure -->
+            <timeout>4</timeout>
+
+            <!-- After added content lookups have been disabled due to too many
+                lookup failures, this is the amount of time to wait before
+                we try again -->
             <retry_timeout>600</retry_timeout>
-            <max_errors>5</max_errors>
+
+            <!-- maximum number of consecutive lookup errors a given process can 
+                have before added content lookups are disabled for everyone -->
+            <max_errors>4</max_errors>
+
+            <!-- If a userid is required to access the added content.. -->
+            <userid>MY_USER_ID</userid>
+
+            <!--
+                You can add free-form settings here and they will be accessible
+                within the added content module
             -->
+
         </added_content>
 
 
