--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -662,9 +662,12 @@ Example opensrf config file for OpenILS
 
         <localhost> 
             <!-- ^-=- 
-                must match the fully qualified domain name of the host.
-                on Linux, this is usually the output of "hostname -f"
-               'localhost' won't work here
+                Should match the fully qualified domain name of the host.
+
+                On Linux, the output of the following command is authoritative:
+		  $ perl -MNet::Domain -e 'print Net::Domain::hostfqdn();'
+
+                To use 'localhost' instead, run osrf_ctl.sh with the -l flag
             -->
 
             <activeapps>
