defaulting to JSON_v1 style objects for the example apache config

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -180,6 +180,7 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 <Location /gateway>
     SetHandler osrf_json_gateway_module
+    OSRFGatewayLegacyJSON "false"
     allow from all
 </Location>
 
