separating the two JSON gateways for backwards compatibility and explicitly setting the encoding style for each

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -176,9 +176,21 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 	
 	
 # ----------------------------------------------------------------------------------
-# OpenSRF JSON gateway
+# XXX Note, it's important to explicitly set the JSON encoding style 
+# (OSRFGatewayLegacyJSON), since the default encoding style will likely change 
+# with OpenSRF 1.0
+# ----------------------------------------------------------------------------------
+# OpenSRF JSON legacy gateway
 # ----------------------------------------------------------------------------------
 <Location /gateway>
+    SetHandler osrf_json_gateway_module
+    OSRFGatewayLegacyJSON "true"
+    allow from all
+</Location>
+# ----------------------------------------------------------------------------------
+# New-style OpenSRF JSON gateway
+# ----------------------------------------------------------------------------------
+<Location /osrf-gateway-v1>
     SetHandler osrf_json_gateway_module
     OSRFGatewayLegacyJSON "false"
     allow from all
