Fix building the client from the staff_client directory with a reasonable default for the OpenSRF libs

--- a/Open-ILS/xul/staff_client/Makefile
+++ b/Open-ILS/xul/staff_client/Makefile
@@ -1,7 +1,12 @@
 # ILS/Open-ILS/xul/staff_client/Makefile
 
 export STAFF_CLIENT_BUILD_ID = $$(/bin/cat build/BUILD_ID)
-export OPENSRF_JSLIBS = $(OPENSRF_LIBS)/javascript
+ifeq ($(origin $(OPENSRF_LIBS)), undefined)
+	# Reasonable default when making the client outside of the root dir
+	OPENSRF_JSLIBS := "/openils/lib/javascript"
+else
+	OPENSRF_JSLIBS := "$(OPENSRF_LIBS)/javascript"
+endif
 
 all: build 
 	@echo
