adding work_payment type and the /strong/ urging of PINES; extending the auth proxy module

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -212,9 +212,9 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 <Location /reporter/>
     SetHandler perl-script
-    PerlSetVar ProxyTitle "Report Login"
-    PerlSetVar ProxyDescription "Please log in to view this report"
-    PerlSetVar ProxyPermissions "VIEW_REPORT_OUTPUT"
+    PerlSetVar OILSProxyTitle "Report Login"
+    PerlSetVar OILSProxyDescription "Please log in to view this report"
+    PerlSetVar OILSProxyPermissions "VIEW_REPORT_OUTPUT"
     PerlHandler OpenILS::WWW::Proxy
     Options +ExecCGI
     PerlSendHeader On
